vlib/v/checker/tests/generics_fn_called_variadic_arg_mismatch.vv
fn max<T>(a ...T) T {
	mut max := a[0]
	for item in a[1..] {
		if max < item {
			max = item
		}
	}
	return max
}

fn main() {
	a := max([1, 2, 3, 4])
	println(a)

	b := max<int>([1, 2, 3, 4])
	println(b)
}
